@@ -1,6 +1,7 @@
 2002-01-30  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* MirrorJob.cc: give direct parent a priority to continue transfers.
+	* ftpclass.cc: better status for fxp transfers.
 
 2002-01-29  Alexander V. Lukyanov <lav@yars.free.net>
 
